<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:weightSum="1">


    <EditText
        android:id="@+id/etTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="7dp"
        android:hint="@string/tarea"
        android:inputType="text" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:hint="@string/fecha"
            android:inputType="date" />

        <Button
            android:id="@+id/btnCalendario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Calendario"
            android:textStyle="bold"/>

    </LinearLayout>



</LinearLayout>