<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:weightSum="1">

        <EditText
            android:id="@+id/txtNomUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textEmailAddress"
            android:paddingLeft="0dp"
            android:textColor="@color/negro"
            android:textColorHint="#999" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/nombre_usuario"
            android:inputType="textEmailAddress"
            android:paddingLeft="0dp"
            android:textColor="@color/negro"
            android:textColorHint="#999" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="0dp"
            android:textColor="@color/negro"
            android:textColorHint="#999" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/lbUsuarioExistente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/usuarioExistente"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/negro"
            android:textStyle="bold"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="326dp"
            android:layout_height="45dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="20dp"
            android:layout_weight="0.24"
            android:background="@color/naranja"
            android:textColor="@color/negro"
            android:textStyle="bold"
            android:text="Registrar"/>

    </LinearLayout>

</FrameLayout>